--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,9 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<slot />
+		<main class="w-full h-screen grid place-items-center">
+			<slot />
+		</main>
 	</body>
 </html>
 <style is:global>
@@ -34,7 +36,7 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background: #13151a;
+		background: #121826;
 		background-size: 224px;
 	}
 	code {
