--- a/src/components/ContainerForm.astro
+++ b/src/components/ContainerForm.astro
@@ -1,15 +1,15 @@
-<div class="bg-[#212936] max-w-[490px] w-full border-2 border-[#4D5562] rounded-lg p-10">
+<div class="bg-[#212936] max-w-[490px] w-full border-2 border-[#394150] rounded-lg p-10">
   <div class="w-full flex-col form-container">
     <h2 class="text-[#E5E7EB] text-2xl font-medium mb-5">Register</h2>
 
     <form id="form" method="post">
       <label for="nombre" class="text-[#A1A1A9] font-medium">
         Name
-        <input class="mt-2 mb-4 w-full bg-transparent border-2 placeholder:text-sm placeholder:text-[#4D5562] border-[#A1A1A9] rounded-xl p-3 outline-none focus:border-[#E5E7EB]" type="text" placeholder="Enter your name" id="nombre" required />
+        <input class="mt-2 mb-4 w-full bg-transparent border-2 placeholder:text-sm placeholder:text-[#4D5562] border-[#394150] rounded-xl p-3 outline-none focus:border-[#4D5562]" type="text" placeholder="Enter your name" id="nombre" required />
       </label>
       <label for="email" class="text-[#A1A1A9] font-medium">
         Email
-        <input class="mt-2 mb-4 w-full bg-transparent border-2 placeholder:text-sm placeholder:text-[#4D5562] border-[#A1A1A9] rounded-xl p-3 outline-none focus:border-[#E5E7EB]" type="text" placeholder="example@gmail.com" id="email" required />
+        <input class="mt-2 mb-4 w-full bg-transparent border-2 placeholder:text-sm placeholder:text-[#4D5562] border-[#394150] rounded-xl p-3 outline-none focus:border-[#4D5562]" type="text" placeholder="example@gmail.com" id="email" required />
       </label>
       
       <button class="m-auto text-center flex self-center  rounded-3xl text-[#E5E7EB] bg-blue-800 font-medium mt-10 px-10 py-2 text-[1rem] bg-[linear-gradient(0deg,_rgba(101,44,209,1)_48%,_rgba(132,94,238,1)_100%)]" id="registerBtn">Continue</button>
