--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import ContainerForm from '../components/ContainerForm.astro'
+import Steps from '../components/Steps.astro'
 ---
 
 <Layout title="Multip Step Register Form">
 	<ContainerForm />
+	<Steps />
 </Layout>
