--- a/src/components/ContainerForm.astro
+++ b/src/components/ContainerForm.astro
@@ -61,6 +61,10 @@
   const inputEmail = document.querySelector("#email") as HTMLInputElement
   const nameSpan = document.querySelector('#name-span') as HTMLSpanElement
   const emailSpan = document.querySelector('#email-span') as HTMLSpanElement
+  const steps : NodeListOf<Element>  = document.querySelectorAll('.step')
+
+  console.log(steps);
+
   let name : string = ""
   let email : string = ""
   
@@ -71,12 +75,17 @@
     name = inputName.value
     email = inputEmail.value
 
-    console.log(name, email);
-    formContainer?.classList.add("hidden")
-    skillsContainer?.classList.replace("hidden", "block")
+    formContainer.classList.add("hidden")
+    skillsContainer.classList.replace("hidden", "block")
 
     nameSpan.textContent = name
     emailSpan.textContent = email
+
+    steps[0].classList.remove('bg-[#652CD1]/35')
+    steps[0].lastElementChild.classList.replace('bg-[#845EEE]', 'bg-[#394150]')
+    steps[1].classList.add('bg-[#652CD1]/35')
+    steps[1].lastElementChild.classList.replace('bg-[#394150]', 'bg-[#845EEE]')
+
   })
   
   // Elegir los skills
@@ -119,7 +128,10 @@
       topicsContainer.appendChild(li)
     })
 
-    console.log(skillsArray);
+    steps[1].classList.remove('bg-[#652CD1]/35')
+    steps[1].lastElementChild.classList.replace('bg-[#845EEE]', 'bg-[#394150]')
+    steps[2].classList.add('bg-[#652CD1]/35')
+    steps[2].lastElementChild.classList.replace('bg-[#394150]', 'bg-[#845EEE]')
   })
 
   console.log(skillsArray);
